mule.dev.properties consolidation.

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,16 +1,17 @@
-# Properties to be used on the Development environment
+# Properties to be used on the test environment
 
-polling.frequency=
-watermark.default.expression=
+# Application Configuration
+page.size=
+polling.start.delay=
 
-# SalesForce Connector configuration for company A
+poll.frequencyMillis=
+poll.startDelayMillis=
+
+# SalesForce Connector configuration
 sfdc.a.username=
 sfdc.a.password=
 sfdc.a.securityToken=
 sfdc.a.url=
 
-# SalesForce Connector configuration for company B
-sfdc.b.username=
-sfdc.b.password=
-sfdc.b.securityToken=
-sfdc.b.url=
+# Dabase connection url
+database.url=
