--- a/pom.xml
+++ b/pom.xml
@@ -495,7 +495,13 @@
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
-
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- Connectors -->
 		<dependency>
 			<groupId>org.mule.modules</groupId>
