Inbound endpoint has replaced by database poll.

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -3,6 +3,7 @@
 # Application Configuration
 page.size=
 polling.start.delay=
+watermark.default.expression=
 
 poll.frequencyMillis=
 poll.startDelayMillis=
