moving predefined properties to common.properties
Conflicts:
	src/main/resources/common.properties
	src/main/resources/mule.dev.properties
	src/main/resources/mule.prod.properties
	src/main/resources/mule.qa.properties
	src/main/resources/mule.uat.properties

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,12 +1,4 @@
-# Properties to be used on the test environment
-
-# Application Configuration
-page.size=
-polling.start.delay=
-watermark.default.expression=
-
-poll.frequencyMillis=
-poll.startDelayMillis=
+# Properties to be used on the Developemnt environment
 
 # SalesForce Connector configuration
 sfdc.a.username=
