--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -1,11 +1,4 @@
-# Properties to be used on the test environment
-
-# Application Configuration
-page.size=
-polling.start.delay=
-
-poll.frequencyMillis=
-poll.startDelayMillis=
+# Properties to be used on the Production environment
 
 # SalesForce Connector configuration
 sfdc.a.username=
