--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,3 +1,6 @@
 # Properties to be used across all the environments. They can be overwritten.
 http.port=9090
-polling.start.delay=0
+watermark.default.expression=#[groovy: new Date(System.currentTimeMillis() - 10000).format("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'", TimeZone.getTimeZone('UTC'))]
+page.size=10
+poll.frequencyMillis=5000
+poll.startDelayMillis=0
