--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,16 +1,10 @@
 # Properties to be used on the QA environment
 
-polling.frequency=
-watermark.default.expression=
-
-# SalesForce Connector configuration for company A
+# SalesForce Connector configuration
 sfdc.a.username=
 sfdc.a.password=
 sfdc.a.securityToken=
 sfdc.a.url=
 
-# SalesForce Connector configuration for company B
-sfdc.b.username=
-sfdc.b.password=
-sfdc.b.securityToken=
-sfdc.b.url=
+# Dabase connection url
+database.url=
