--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the Developemnt environment
+# Properties to be used on the development environment
 
 # SalesForce Connector configuration
 sfdc.a.username=
