--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>template-db2sfdc-account-broadcast</artifactId>
 	<packaging>mule</packaging>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<name>db2sfdc-account-broadcast Mule Anypoint Template Project</name>
 
 	<scm>
 		<connection>scm:git:https://github.com/mulesoft/template-db2sfdc-account-broadcast.git</connection>
 		<developerConnection>scm:git:https://github.com/mulesoft/template-db2sfdc-account-broadcast.git</developerConnection>
 		<url>https://github.com/mulesoft/template-db2sfdc-account-broadcast</url>
-	  <tag>v1.0.1</tag>
+	  <tag>v1.0.3</tag>
   </scm>
 
 	<build>
