--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,4 +1,4 @@
 #** GENERATED CONTENT ** Mule Custom Properties file.
-#Fri Jan 24 16:35:39 GMT-03:00 2014
-secure.properties=sfdc.a.password,sfdc.b.password
+#Wed Sep 09 16:35:39 GMT-03:00 2015
+secure.properties=sfdc.password,sfdc.securityToken,database.url
 mule.env=dev
