--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,7 +1,6 @@
 # Properties to be used across all the environments. They can be overwritten.
-http.port=
 watermark.default.expression=
-page.size=200
+page.size=
 poll.frequencyMillis=
 poll.startDelayMillis=
 
