--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -1,10 +1,10 @@
 # Properties to be used on the QA environment
 
 # SalesForce Connector configuration
-sfdc.a.username=
-sfdc.a.password=
-sfdc.a.securityToken=
-sfdc.a.url=
+sfdc.username=
+sfdc.password=
+sfdc.securityToken=
+sfdc.url=
 
 # Dabase connection url
 database.url=
