--- a/templates/endpoints.template
+++ b/templates/endpoints.template
@@ -1,36 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<mule xmlns:db="http://www.mulesoft.org/schema/mule/db"
-	xmlns:batch="http://www.mulesoft.org/schema/mule/batch" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:http="http://www.mulesoft.org/schema/mule/http" 
-xmlns="http://www.mulesoft.org/schema/mule/core" 
-xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" 
-xmlns:spring="http://www.springframework.org/schema/beans" 
-version="EE-3.7.0" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xsi:schemaLocation="http://www.mulesoft.org/schema/mule/db http://www.mulesoft.org/schema/mule/db/current/mule-db.xsd
-http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
-http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
-http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
-http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
-http://www.mulesoft.org/schema/mule/batch http://www.mulesoft.org/schema/mule/batch/current/mule-batch.xsd">
-
-	<!-- 	In this file you should declare all your inbound endpoints and from here control the access to your application -->
-
-    <flow name="triggerFlow"  processingStrategy="synchronous" doc:description="This is the simpliest entry point to start the excecution of your Template
-Here you should: 
-	* Configure the inbound endpoint, in this case a polling to fetch data from origin system
-	* Handle any input parameter and set the scope of it so the main logic does not care from where it is called">
-        <poll doc:name="Salesforce for accounts">
-            <fixed-frequency-scheduler frequency="${poll.frequencyMillis}" startDelay="${poll.startDelayMillis}"/>
-            <watermark variable="lastQueryDate" default-expression="${watermark.default.expression}" selector="MAX" selector-expression="#[payload.LastModifiedDate]"/>
-            <db:select config-ref="GenericDatabaseConnector" doc:name="query database for accounts">
-                <db:parameterized-query><![CDATA[SELECT AccountNumber, Description, Id, Industry, Name, NumberOfEmployees, Phone, Type, LastModifiedDate FROM Account WHERE LastModifiedDate > #[flowVars['lastQueryDate']] ORDER BY LastModifiedDate ASC]]></db:parameterized-query>
-
-
-            </db:select>
-        </poll>
-        <batch:execute name="syncAccountsBatch" doc:name="trigger syncAccountsBatch"/>
-        <exception-strategy ref="defaultChoiceExceptionStrategy" doc:name="Reference Exception Strategy"/>        
-    </flow>
-
-</mule>
+## Pattern Broadcast
+#set( $trigger_flow = $fragment_container_flow_broadcast_db_account_trigger )
+#evaluate( $fragment_pattern_broadcast_endpoints )
