SIT-2505 Implemented watermarking mechanism

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,18 +1,20 @@
 # Properties to be used on the development environment
 
 # Scheduler configuration
-scheduler.frequency=
-scheduler.startDelay=
+#scheduler.frequency=
+#scheduler.startDelay=
+
+# Watermarking default last query timestamp e.g. 2017-12-13T03:00:59Z
+#watermark.default.expression=
 
 # Database Connector configuration
-db.host=
-db.port=
-db.name=
-db.user=
-db.password=
+#db.host=
+#db.port=
+#db.name=
+#db.user=
+#db.password=
 
 # SalesForce Connector configuration
-sfdc.username=
-sfdc.password=
-sfdc.securityToken=
-sfdc.url=
+#sfdc.username=
+#sfdc.password=
+#sfdc.securityToken=
