--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -4,6 +4,9 @@
 scheduler.frequency=
 scheduler.startDelay=
 
+# Watermarking default last query timestamp e.g. 2017-12-13T03:00:59Z
+watermark.default.expression=
+
 # Database Connector configuration
 db.host=
 db.port=
