--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,2 +1,8 @@
 # Properties to be used across all the environments. They can be overwritten.
+
+#Application configuration
 page.size=
+
+# Scheduler configuration
+scheduler.frequency=
+scheduler.startDelay=
