--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>2.1.17</version>
     </parent>
     <artifactId>template-db2sfdc-account-broadcast</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <packaging>mule-application</packaging>
     <name>template-db2sfdc-account-broadcast</name>
     <build>
@@ -105,4 +105,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-<scm><connection>scm:git:git@github.com:mulesoft/template-db2sfdc-account-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-db2sfdc-account-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-db2sfdc-account-broadcast</url><tag>HEAD</tag></scm></project>
+<scm><connection>scm:git:git@github.com:mulesoft/template-db2sfdc-account-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-db2sfdc-account-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-db2sfdc-account-broadcast</url><tag>v2.1.1</tag></scm></project>
